--- a/02 A Digital Clock/style.css
+++ b/02 A Digital Clock/style.css
@@ -16,8 +16,8 @@ body {
 
 #showtime {
     border: 1px #fff solid;
-    background-color: rgb(11, 0, 110);
-    color: rgb(255, 0, 0);
+    background-color: #0b006e;
+    color: #ff0000;
     font-family: 'Orbitron';
     width: 80vw;
     height: 80px;
