--- a/07-Voice_Recording/css/style.css
+++ b/07-Voice_Recording/css/style.css
@@ -2,12 +2,13 @@
 
 *, *::before, *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 :root {
     --content-font-family: 'Quicksand', sans-serif;
-    --banner-font-family: 'Red Hat Text', sans-serif;
-    --header-nav-font-family: 'Red Rose', cursive;
+    --header-nav-font-family: 'Red Hat Text', sans-serif;
 }
 
 a {
@@ -18,6 +19,7 @@ a {
 body {
     margin: 0;
     max-width: 100vw;
+    height: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -115,7 +117,7 @@ body {
 
 .top-right.design-circle {
     position: absolute;
-    z-index: -1;
+    z-index: -10;
     top: 0;
     right: 0;
     height: 30vw;
@@ -146,23 +148,24 @@ body {
 
 .bottom-left.design-circle {
     position: absolute;
-    z-index: -1;
-    bottom: 0;
+    z-index: -10;
+    bottom: 0rem;
     left: 0;
-    height: 30vw;
-    width: 30vw;
+    height: 25vw;
+    width: 25vw;
+    /* transform: translate(-30%, 30%);
     max-height: 60vw;
-    max-width: 60vw;
-    overflow: hidden;
+    max-width: 60vw; */
+    border-radius: 50%;
 }
 
 .bottom-left-fill-design-circle {
     position: relative;
     height: 100%;
     width: 100%;
-    border-radius: 50%;
-    transform: translate(-20%, 30%);
     overflow: hidden;
+    /* border-radius: 50%;
+    overflow: hidden; */
 }
 
 .bottom-left-fill-design-circle::before {
@@ -171,10 +174,18 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
+    transform: translate(-20%, 20%);
+    border-radius: 50%;
     background-image: url(../img/bottom-left.jpeg);
     background-position: center;
     background-size: contain;
     position: absolute;
+}
+
+/* FONT TO USE IN PAGES */
+.company-home-slogan {
+    font-family: var(--content-font-family);
+    letter-spacing: 0.2em;
 }
 
 /* Screen Issue */
