--- a/07-Voice_Recording/css/home.css
+++ b/07-Voice_Recording/css/home.css
@@ -27,18 +27,13 @@
 
     .company-banner-logo::before {
         content: '';
-        z-index: -10;
+        z-index: -1;
         height: 600px;
         width: 600px;
         background-color: rgba(215, 55, 55, 0.8);
         transform: translate(-55%, -30%);
         border-radius: 50%;
         position: absolute;
-    }
-
-    .company-banner-logo {
-        position: absolute;
-        left: 2rem;
     }
 
     .company-banner-logo img {
@@ -62,9 +57,9 @@
     background: #131528;
     margin-top: 1rem;
     border-radius: 30px;
-    height: 250px;
+    height: max-content;
+    padding: 0 1rem;
     width: 50vw;
-    padding: 1rem 2rem;
     position: relative;
     color: #fff;
     display: flex;
@@ -75,11 +70,59 @@
 
 .company-slogan-title {
     font-size: 3rem;
+    padding-top: 2rem;
     margin-bottom: 1rem;
     text-align: center;
 }
 
 .company-slogan-main {
     font-size: 2rem;
+    padding-bottom: 2rem;
     text-align: center;
+}
+/* End */
+
+/* Screen Issue */
+@media (max-width: 1000px) {
+    .company-banner-logo::before,
+    .company-banner-logo img {
+        display: none;
+    }
+}
+
+@media (max-width: 900px){
+    .company-home-banner {
+        height: 150px;
+        width: 100vw;
+        border-radius: 0;
+        border: none;
+    }
+
+    .company-banner-text {
+        font-size: 4rem;
+    }
+
+    .company-slogan-title {
+        font-size: 2rem;
+        border-bottom: 2px solid #fff;
+    }
+
+    .company-slogan-main {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 900px){
+    .company-banner-text {
+        font-size: 3rem;
+    }
+
+    .company-slogan-title {
+        font-size: 1.5rem;
+        border-bottom: 2px solid #fff;
+    }
+
+    .company-slogan-main {
+        font-size: 1rem;
+    }
 }
