--- a/07-Voice_Recording/css/style.css
+++ b/07-Voice_Recording/css/style.css
@@ -18,7 +18,7 @@ a {
 
 body {
     margin: 0;
-    max-width: 100vw;
+    width: 100vw;
     height: 100%;
     min-height: 100vh;
     display: flex;
@@ -26,6 +26,8 @@ body {
     align-items: center;
     background: linear-gradient(115deg, #2A2FA4 0%, #C14702 100%);
     background-repeat: no-repeat;
+
+    overflow-x: hidden;
 }
 
 /* header nav */
@@ -146,35 +148,29 @@ body {
     position: absolute;
 }
 
-.bottom-left.design-circle {
+.bottom-right.design-circle {
     position: absolute;
     z-index: -10;
-    bottom: 0rem;
-    left: 0;
-    height: 25vw;
-    width: 25vw;
-    /* transform: translate(-30%, 30%);
-    max-height: 60vw;
-    max-width: 60vw; */
+    bottom: 0;
+    right: 0;
+    height: 10vw;
+    width: 10vw;
     border-radius: 50%;
 }
 
-.bottom-left-fill-design-circle {
+.bottom-right-fill-design-circle {
     position: relative;
     height: 100%;
     width: 100%;
     overflow: hidden;
-    /* border-radius: 50%;
-    overflow: hidden; */
 }
 
-.bottom-left-fill-design-circle::before {
+.bottom-right-fill-design-circle::before {
     content: '';
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    transform: translate(-20%, 20%);
     border-radius: 50%;
     background-image: url(../img/bottom-left.jpeg);
     background-position: center;
@@ -222,7 +218,9 @@ body {
         display: none;
     }
 
-    .bottom-left-fill-design-circle {
-        transform: translate(-30%, 30%);
+    .bottom-right-fill-design-circle {
+        max-width: 50vw;
+        max-height: 50vw;
+        transform: translateX(50%);
     }
 }
