--- a/07-Voice_Recording/css/record.css
+++ b/07-Voice_Recording/css/record.css
@@ -1,3 +1,51 @@
 * {
     font-family: var(--reminder-font);
 }
+
+.hide-feature {
+    display: none;
+}
+
+.audio-main {
+    margin-top: 2.5rem;
+}
+
+/* Audio main Container */
+
+    .audio-main-container {
+        width: 80vw;
+        background: rgba(235, 235, 235, 0.8);
+        border: 3px solid #797979;
+        box-sizing: border-box;
+        border-radius: 30px;
+    }
+
+    #audio-wave-form,
+    #audio-bar-form {
+        width: 100%;
+        height: 150px;
+    }
+
+/* End */
+
+/* Audio Main Controls */
+    .audio-main-controls {
+        margin-top: 2.5rem;
+        display: flex;
+    }
+
+    .control {
+        height: 150px;
+        width: 150px;
+        border-radius: 50%;
+        border: 5px solid #000;
+        background: #BE383D;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .no-border {
+        border: none;
+    }
+/* End */
