--- a/07-Voice_Recording/css/record.css
+++ b/07-Voice_Recording/css/record.css
@@ -25,6 +25,13 @@
         background: rgba(235, 235, 235, 0.8);
         border: 3px solid #797979;
         border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .audio-visual {
+        margin-top: 30px;
     }
 
 /* End */
