--- a/07-Voice_Recording/css/record.css
+++ b/07-Voice_Recording/css/record.css
@@ -25,12 +25,19 @@
         background: rgba(235, 235, 235, 0.8);
         border: 3px solid #797979;
         border-radius: 30px;
+        padding: 15px;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
     .audio-visual {
+        height: 150px;
+        width: 100%;
+    }
+
+    .audio-visual:first-child {
         margin-top: 30px;
     }
 
